# edgar-filings

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/edgar_filings/: __init__.py  _base.py  _hosts.py  async_client.py  auth.py  client.py  errors.py  models.py  submissions.py
tests/: conftest.py
tests/fixtures/: responses.py
tests/integration/: conftest.py  test_beta_roundtrip.py
tests/integration/cassettes/test_beta_roundtrip/: test_status.yaml  test_submit_test_13f_and_poll_status.yaml  test_verify_credentials.yaml
tests/unit/: test_errors.py  test_filer_management.py  test_mode_safety.py  test_status.py  test_submission.py  test_submission_builder.py
