[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "edgar-filings"
version = "0.1.1"
description = "Python client for the SEC EDGAR filing APIs (filer management, submissions, submission status)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Dock Street Asset Management", email = "spencer@dockstreet.com" },
]
keywords = ["sec", "edgar", "filings", "13f", "regulatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
    "lxml>=5.2",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/Dockstreet/edgar-filings"
Issues = "https://github.com/Dockstreet/edgar-filings/issues"
Documentation = "https://github.com/Dockstreet/edgar-filings#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-lxml>=2024.4",
]

[tool.hatch.build.targets.sdist]
include = ["src/edgar_filings", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_filings"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src/edgar_filings"]
